11 Jul 2018
fix: missing require thanks.php
fix: missing require bookmark.php

9 Jul 2018
fix: uptime time display
fix: mybonus.php sort order
fix: crazyhour global message

8 Jul 2018
fix: get empty image get_body_image()
fix: avatar max-width
fix: update user birthday when birthday not set
fix: get random image get_body_image()
update: delete get_body_image() cache on new upload
fix: url getting deleted when edit takeedit.php
update: remove banner and background when torrent poster is changed
update: clean up get_show_name() for better search results
fix: emoticons.php
update: bitbucket.php allow webp images, optimize images after upload
update: details.php to show which api lookup results are showing
update: composer
fix: background art not showing when enabled
add: user option to use 12 or 24 hour clock everywhere except AJAX Chat(working on it)
update: database update process
remove: some extraneous spaces in lang files

7 Jul 2018
fix: plural question(s) in trivia points pm
add: option to use 12 or 24 hour clock everywhere except AJAX Chat(working on it)

5 Jul 2018
fix: remove invalid chars from uploaded nfo before db insert
fix: typo in bittorrent.php
fit: incorrect method name

1 Jul 2018
fix: check if folder exists before setting perms set_perms.php
update: set new/updated files owner:group according to current owner:group set_perms.php
fix: check for empty vars before using them signup.php
fix: install folder check
fix: incorrect file permissions in 775 folders
fix: bit bucket link not showing
update: max image size in AJAX Chat
fix: images in AJAX Chat
remove: unused gzip directory
add: logs folder
fix: permissions
update: README to correct install directions
remove: redundant fetch() functions
replace: remote image proxy with local image proxy, enable only if you have the space for it
purged: database_updates, rethinking the process
updated: README to include required apps and php extensions
add: option to show random background on every page